Contact additional text

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -3,5 +3,7 @@
     "links.portfolio": "Portfolio",
     "links.contact": "Contact",
 
-    "welcomeMessage": "Welcome to the website of developer Fallen97Angel!"
+    "welcomeMessage": "Welcome to the website of developer Fallen97Angel!",
+    
+    "contactMeMessage": "If you want to hire me, you can contact me through one of these social networks: "
 }
