--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -3,5 +3,7 @@
     "links.portfolio": "Мои работы",
     "links.contact": "Контакты",
 
-    "welcomeMessage": "Добро пожаловать на сайт разработчика Fallen97Angel!"
+    "welcomeMessage": "Добро пожаловать на сайт разработчика Fallen97Angel!",
+
+    "contactMeMessage": "Вы можете связаться со мной через эти соцсети:"
 }
