--- a/src/translations/ua.json
+++ b/src/translations/ua.json
@@ -3,5 +3,7 @@
     "links.portfolio": "Порфтоліо",
     "links.contact": "Контакти",
 
-    "welcomeMessage": "Ласкаво просимо на сайт розробника Fallen97Angel!"
+    "welcomeMessage": "Ласкаво просимо на сайт розробника Fallen97Angel!",
+
+    "contactMeMessage": "If you want to hire me, you can contact me through one of these social networks: "
 }
